feature(signin): signin and profile  [Finishes #167014480]

--- a/UI/pages/signup.html
+++ b/UI/pages/signup.html
@@ -17,10 +17,10 @@
             <nav>
                 <a href="../index.html"><img src="../image/prop.png" alt="Homepage"></a>
                 <ul class="info">
-                    <li><a href="./pages/allprop.html">Rent/Buy</a></li>
-                    <li><a href="./pages/login.html">Advertise</a></li>
-                    <li><a href="#">Sign Up</a></li>
-                    <li><a href="./pages/login.html">Log In</a></li>
+                    <li><a href="#">Rent/Buy</a></li>
+                    <li><a href="#">Advertise</a></li>
+                    <li><a href="./signup.html">Sign Up</a></li>
+                    <li><a href="./login.html">Log In</a></li>
                 </ul>
                 </div>
             </nav>
@@ -30,17 +30,17 @@
             <h3>Register here</h3>
             <form action="" class="signupform">
                 <p id="form-info"><span>*</span>All forms in the field are required</p>
-                <p><input type="text" name="firstName" id="firstname" placeholder="First Name" required></p>
-                <p><input type="text" name="lastname" id="lastname" placeholder="Last Name" required></p>
-                <p><input type="number" name="phone" id="phone" placeholder="Phone Number"></p>
-                <p><input type="text" name="address" id="address" placeholder="Address" required></p>
-                <p><input type="email" id="usermail" required placeholder="Email"></p>
-                <p><input type="password" id="userpwd1" required placeholder="Password"></p>
-                <p><input type="password" id="userpwd2" required placeholder="Confirm Password">
+                <p><input type="text" class="input" name="firstName" id="firstname" placeholder="First Name" required>
+                </p>
+                <p><input type="text" class="input" name="lastname" id="lastname" placeholder="Last Name" required></p>
+                <p><input type="number" class="input" name="phone" id="phone" placeholder="Phone Number"></p>
+                <p><input type="text" class="input" name="address" id="address" placeholder="Address" required></p>
+                <p><input type="email" class="input" id="usermail" required placeholder="Email"></p>
+                <p><input type="password" class="input" id="userpwd1" required placeholder="Password"></p>
+                <p><input type="password" class="input" id="userpwd2" required placeholder="Confirm Password">
                 </p>
 
-
-                <p><input type="submit" value="Submit" id="submit"></p>
+                <p><input type="submit" class="submitbtn" value="Submit" id="submit"></p>
             </form>
         </div>
 
