feature(post property): can post property  [Finishes #167014489]

--- a/UI/index.html
+++ b/UI/index.html
@@ -15,8 +15,8 @@
             <nav>
                 <a href="#"><img src="./image/prop.png" alt="Homepage"></a>
                 <ul class="info">
-                    <li><a href="./pages/allprop.html">Rent/Buy</a></li>
-                    <li><a href="./pages/login.html">Advertise</a></li>
+                    <li><a href="">Rent/Buy</a></li>
+                    <li><a href="">Advertise</a></li>
                     <li><a href="./pages/signup.html">Sign Up</a></li>
                     <li><a href="./pages/login.html">Log In</a></li>
                 </ul>
