--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -40,6 +40,10 @@
                 </form>
             </div>
         </div>
+
+        <footer>
+            <p>&copy; Copyright 2019</p>
+        </footer>
     </body>
 
 </html>
