--- a/UI/pages/profile.html
+++ b/UI/pages/profile.html
@@ -62,8 +62,12 @@
                     <p>Delete advert</p>
                 </div>
             </details>
-            
+
         </div>
+
+        <footer>
+            <p>&copy; Copyright 2019</p>
+        </footer>
     </body>
 
 </html>
