--- a/UI/pages/profile.html
+++ b/UI/pages/profile.html
@@ -18,7 +18,7 @@
                 <a href="../index.html"><img src="../image/prop.png" alt="Homepage"></a>
                 <ul class="info">
                     <li><a href="#">Rent/Buy</a></li>
-                    <li><a href="#">Advertise</a></li>
+                    <li><a href="./postproperty.html">Advertise</a></li>
                     <li><a href="./signup.html">Sign Up</a></li>
                     <li><a href="./login.html">Log In</a></li>
                 </ul>
@@ -57,9 +57,8 @@
             <details id="manage" class="profileinfo">
                 <summary>Manage Property</summary>
                 <div class="content">
-                    <p>Post a new property</p>
-                    <p>Update advert</p>
-                    <p>Delete advert</p>
+                    <p><a href="postproperty.html">Post a new property</a></p>
+                    <p><a href="posted.html">Edit advert</a></p>
                 </div>
             </details>
 
