--- a/UI/pages/signup.html
+++ b/UI/pages/signup.html
@@ -18,7 +18,7 @@
                 <a href="../index.html"><img src="../image/prop.png" alt="Homepage"></a>
                 <ul class="info">
                     <li><a href="#">Rent/Buy</a></li>
-                    <li><a href="#">Advertise</a></li>
+                    <li><a href="./postproperty.html">Advertise</a></li>
                     <li><a href="./signup.html">Sign Up</a></li>
                     <li><a href="./login.html">Log In</a></li>
                 </ul>
