--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -18,8 +18,8 @@
             <nav>
                 <a href="../index.html"><img src="../image/prop.png" alt="Homepage"></a>
                 <ul class="info">
-                    <li><a href="./allprop.html">Rent/Buy</a></li>
-                    <li><a href="./login.html">Advertise</a></li>
+                    <li><a href="">Rent/Buy</a></li>
+                    <li><a href="./postproperty.html">Advertise</a></li>
                     <li><a href="./signup.html">Sign Up</a></li>
                     <li><a href="./login.html">Log In</a></li>
                 </ul>
