feature(mark): mark as sold  [Finishes #167014533]

--- a/UI/pages/posted.html
+++ b/UI/pages/posted.html
@@ -42,7 +42,10 @@
                             <li>Interlocked tile floor</li>
                         </ul>
                         <p>Cost:&nbsp;&nbsp;N40,000,000</p>
-                        <button class="edit-content">Edit</button>
+                        <div class="user-action">
+                            <button class="edit-content">Edit</button>
+                            <button class="edit-content mark-sold">Mark as sold</button>
+                        </div>
                     </div>
 
                 </div>
@@ -66,7 +69,10 @@
                             <li>Marble floor</li>
                         </ul>
                         <p>Cost:&nbsp;&nbsp;N60,000,000</p>
-                        <button class="edit-content">Edit</button>
+                        <div class="user-action">
+                            <button class="edit-content">Edit</button>
+                            <button class="edit-content mark-sold">Mark as sold</button>
+                        </div>
                     </div>
                 </div>
 
@@ -93,7 +99,11 @@
                     </div>
 
                 </div>
-                <button class="edit-content">Edit</button>
+                <div class="user-action">
+                    <button class="edit-content">Edit</button>
+                    <button class="edit-content mark-sold">Mark as sold</button>
+                </div>
+
             </div>
 
         </section>
