--- a/UI/pages/posted.html
+++ b/UI/pages/posted.html
@@ -45,6 +45,7 @@
                         <div class="user-action">
                             <button class="edit-content">Edit</button>
                             <button class="edit-content mark-sold">Mark as sold</button>
+                            <button class="edit-content delete-advert">Delete</button>
                         </div>
                     </div>
 
@@ -72,6 +73,7 @@
                         <div class="user-action">
                             <button class="edit-content">Edit</button>
                             <button class="edit-content mark-sold">Mark as sold</button>
+                            <button class="edit-content delete-advert">Delete</button>
                         </div>
                     </div>
                 </div>
@@ -102,6 +104,7 @@
                 <div class="user-action">
                     <button class="edit-content">Edit</button>
                     <button class="edit-content mark-sold">Mark as sold</button>
+                    <button class="edit-content delete-advert">Delete</button>
                 </div>
 
             </div>
