feature(viewall): can view all  [Finishes #167014567]

--- a/UI/index.html
+++ b/UI/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="#"><img src="./image/prop.png" alt="Homepage"></a>
                 <ul class="info">
-                    <li><a href="">Rent/Buy</a></li>
+                    <li><a href="./pages/allprops.html">Rent/Buy</a></li>
                     <li><a href="./pages/postproperty.html">Advertise</a></li>
                     <li><a href="./pages/signup.html">Sign Up</a></li>
                     <li><a href="./pages/login.html">Log In</a></li>
