--- a/UI/pages/posted.html
+++ b/UI/pages/posted.html
@@ -14,7 +14,7 @@
             <nav>
                 <a href="../index.html"><img src="../image/prop.png" alt="Homepage"></a>
                 <ul class="info">
-                    <li><a href="#">Rent/Buy</a></li>
+                    <li><a href="./allprops.html">Rent/Buy</a></li>
                     <li><a href="./postproperty.html">Advertise</a></li>
                     <li><a href="./signup.html">Sign Up</a></li>
                     <li><a href="./login.html">Log In</a></li>
