feature(specific): view specific type  [Finishes #167014600]

--- a/UI/pages/allprops.html
+++ b/UI/pages/allprops.html
@@ -15,10 +15,10 @@
             <nav>
                 <a href="#"><img src="../image/prop.png" alt="Homepage"></a>
                 <ul class="info">
-                    <li><a href="./pages/allprops.html">Rent/Buy</a></li>
-                    <li><a href="./pages/postproperty.html">Advertise</a></li>
-                    <li><a href="./pages/signup.html">Sign Up</a></li>
-                    <li><a href="./pages/login.html">Log In</a></li>
+                    <li><a href="./allprops.html">Rent/Buy</a></li>
+                    <li><a href="./postproperty.html">Advertise</a></li>
+                    <li><a href="./signup.html">Sign Up</a></li>
+                    <li><a href="./login.html">Log In</a></li>
                 </ul>
                 </div>
             </nav>
@@ -45,6 +45,7 @@
                         </ul>
                         <p>Cost:&nbsp;&nbsp;N40,000,000</p>
                     </div>
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
 
                 </div>
             </div>
@@ -68,9 +69,11 @@
                         </ul>
                         <p>Cost:&nbsp;&nbsp;N60,000,000</p>
                     </div>
-                </div>
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
 
+                </div>
             </div>
+
             <div class="card" id="selfcon1">
                 <div class="image">
                     <img
@@ -89,8 +92,9 @@
                             <li>Tiled floor</li>
                         </ul>
                         <p>Rent:&nbsp;&nbsp;N125,000</p>
-                        <p>Status: <span id="status">Available</span></p>
+
                     </div>
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
 
                 </div>
             </div>
@@ -114,6 +118,7 @@
                         </ul>
                         <p>Rent:&nbsp;&nbsp;N85,000</p>
                     </div>
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
 
                 </div>
             </div>
@@ -136,6 +141,7 @@
                         </ul>
                         <p>Rent:&nbsp;&nbsp;N175,000</p>
                     </div>
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
 
                 </div>
             </div>
@@ -159,7 +165,7 @@
                         </ul>
                         <p>Rent:&nbsp;&nbsp;N250,000</p>
                     </div>
-
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
                 </div>
             </div>
 
@@ -181,7 +187,7 @@
                         </ul>
                         <p>Rent:&nbsp;&nbsp;N300,000</p>
                     </div>
-
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
                 </div>
             </div>
 
@@ -203,7 +209,7 @@
                         </ul>
                         <p>Rent:&nbsp;&nbsp;N400,000</p>
                     </div>
-
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
                 </div>
             </div>
 
@@ -226,7 +232,7 @@
                         </ul>
                         <p>Cost:&nbsp;&nbsp;N40,000,000</p>
                     </div>
-
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
                 </div>
             </div>
 
@@ -249,7 +255,7 @@
                         </ul>
                         <p>Cost:&nbsp;&nbsp;N85,000,000</p>
                     </div>
-
+                    <a href="prop.html"><button class="edit-content view-prop">View details</button></a>
                 </div>
             </div>
 
