feature(type): specific property type  [Finishes #167014578]

--- a/UI/pages/allprops.html
+++ b/UI/pages/allprops.html
@@ -19,8 +19,18 @@
                     <li><a href="./postproperty.html">Advertise</a></li>
                     <li><a href="./signup.html">Sign Up</a></li>
                     <li><a href="./login.html">Log In</a></li>
+                    <div class="dropdown">
+                        <ul class="dropbtn">Property Type</ul>
+                        <div class="dropdown-content">
+                            <a href="#">Self contained</a>
+                            <a href="#">Mini flat</a>
+                            <a href="#">Flat</a>
+                            <a href="#">Duplex</a>
+                        </div>
+                    </div>
                 </ul>
-                </div>
+
+
             </nav>
         </header>
 
